seem to now correctly add and remove both on client and server. going back forth on mobile doesnt work

--- a/public/style.css
+++ b/public/style.css
@@ -93,14 +93,16 @@ body * {
 }
 
 .word-box-wrapper {
-  width: 100%;
+  /* width: 100%; */
+  width: 60%;
   height: 80px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   grid-column-gap: 8px;
   grid-row-gap: 8px;
+  padding: 12px;
 
   z-index: 12;
   position: absolute;
@@ -109,14 +111,16 @@ body * {
 
 @media screen and (min-width: 768px) {
   .word-box-wrapper {
+    width: 40%;
     /* top: 0; */
   }
 }
 
 .word-box {
-  padding: 4px 8px;
+  padding: 4px 12px;
   background: #dfdfdf;
   border-radius: 2px;
+  border-radius: 100px;
   font-size: 14px;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
